# totan

./: .gitignore  AGENTS.md  Cargo.toml  docker-compose.yaml
.github/workflows/: ci.yml
config/: config.example.toml  proxy.example.pac
docs/: known-issues.md
toolkit/: Dockerfile  Dockerfile.go-transproxy  config.toml  docker-compose.test.yml  nftables  proxy.pac  run-e2e.sh  squid.conf  start-go-transproxy.sh  start-totan.sh  totan.docker.toml  totan.ebpf-ci.toml  totan.netfilter-ci.toml
toolkit/e2e/: mock-backend.py  mock-proxy.py  mock-socks5.py  run.sh  selfskip.sh  stress.sh  test.pac
totan/: Cargo.toml  build.rs
totan-common/: Cargo.toml
totan-common/src/: config.rs  error.rs  lib.rs  types.rs
totan-ebpf/: Cargo.toml
totan-ebpf/.cargo/: config.toml
totan-ebpf/src/: lib.rs  main.rs
totan/src/: cgroup.rs  cli.rs  connection.rs  ebpf.rs  http_proxy.rs  interceptor.rs  lib.rs  main.rs  netfilter.rs  pac.rs  pac_utils.js  proxy.rs  upstream.rs  utils.rs
totan/tests/: integration_test.rs
