[workspace]

members = [
	"totan",
	"totan-common",
	"totan-ebpf",
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/matchascript/totan"
homepage = "https://github.com/matchascript/totan"
readme = "README.md"
authors = ["totan contributors"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi", "json"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
thiserror = "2"
anyhow = "1"
url = "2"
httparse = "1"
socket2 = "0.6"
nix = { version = "0.30", features = ["socket", "net"] }
boa_engine = "0.20"
once_cell = "1"

