[package]
name = "totan"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "ansi"] }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
httparse = { workspace = true }
socket2 = { workspace = true }
nix = { workspace = true, features = ["socket", "net"] }
boa_engine = { workspace = true }
once_cell = { workspace = true }
totan-common = { path = "../totan-common" }
totan-ebpf = { path = "../totan-ebpf", optional = true }

# New HTTP stack (Phase 1 experimental)
hyper = { version = "1", features = ["http1", "client", "server"] }
hyper-util = { version = "0.1", features = ["client", "server", "http1", "client-legacy"] }
http-body-util = "0.1"
http = "1.3"
# Only HTTP proxying in Phase 1; disable default TLS features to avoid OpenSSL build dependency.
bytes = "1"

[features]
default = ["netfilter"]
netfilter = []
ebpf = ["dep:totan-ebpf"]
